grammar.js
		source_file: $ => seq(
			optional($.shebang_line),
			optional($.NLS),
			optional(seq(repeat1($.file_annotation))),
			optional($.package_header),
			repeat($.import_header),
			repeat(seq($._statement, $._semis)),
			optional($._statement)
		),

		type_parameters: $ => seq($.LANGLE, sep1($.type_parameter, ","), $.RANGLE),

		type_parameter: $ => seq(
			optional($.type_parameter_modifiers),
			alias($.simple_identifier, $.type_identifier),
			optional(seq(":", $._type))
		),

		_function_value_parameters: $ => seq("(", optional(sep1($._function_value_parameter, ",")), ")"),

		function_declaration: $ => seq(
			optional($.modifiers),
			"fun",
			optional(seq(
				optional($.NLS),
				$.type_parameters
			)),
			optional(seq(
				optional($.NLS),
				$.receiverTypeWithDot,
			)),
			$.simple_identifier,
			optional($.NLS),
			$._function_value_parameters,
			optional(seq(
				//optional($.NLS),
				$.COLON,
				optional($.NLS),
				$._type,
			)),
			optional(seq(
				//optional($.NLS),
				$.type_constraints,
			)),
			optional(seq(
				//optional($.NLS),
				$.function_body,
			)),
		),

		function_body: $ => choice(
			$._block,
			seq(
				"=",
				optional($.NLS),
				$._expression
			)
		),

		variable_declaration: $ => seq(
			// repeat($.annotation), TODO
			$.simple_identifier,
			optional(seq(":", $._type))
		),

		property_declaration: $ => seq(
			optional($.modifiers),
			choice("val", "var"),
			optional(seq(
				optional($.NLS),
				$.type_parameters
			)),
			optional(seq(
				optional($.NLS),
				$.receiverTypeWithDot,
			)),
			$.variable_declaration, // TODO: Multi-variable-declaration
			optional($.type_constraints),
			optional(choice(
				seq("=", $._expression),
				$.property_delegate
			)),
			choice(
				seq(
					optional(seq(
						//$.NLS,
						$.semi,
					)),
					optional($.getter),
					optional(seq(
						//optional($.NLS),
						optional($.semi),
						$.setter,
					)),
				),
				seq(
					optional(seq(
						//$.NLS,
						$.semi,
					)),
					optional($.setter),
					optional(seq(
						//optional($.NLS),
						optional($.semi),
						$.getter,
					)),
				),
			)
		),

		statements: $ => seq(
			$._statement,
			repeat(seq($._semis, $._statement)),
			optional($._semis),
		),

		_statement: $ => choice(
			$._declaration,
			seq(
				repeat(choice($.label, $.annotation)),
				choice(
					$.assignment,
					$._loop_statement,
					$._expression
				)
			)
		),

		_block: $ => seq(
			"{",
			optional(choice(
				seq(optional($.NLS), $.statements),
				$.semis
			)),
			"}",
		),

		annotated_lambda: $ => seq(
			repeat($.annotation),
			optional($.label),
			$.lambda_literal
		),

		lambda_literal: $ => seq(
			"{",
			optional(seq(
				optional($.NLS),
				optional($.lambda_parameters),
				"->",
			)),
			optional(seq(
				optional($.NLS),
				$.statements,
			)),
			"}",
		),

		_function_literal: $ => choice(
			$.lambda_literal,
			$.anonymous_function
		),

		_expression: $ => $.expression,
		simple_identifier: $ => $.simpleIdentifier,
		_type: $ => $.type,
		_semis: $ => $.semis,
		semis: $ => choice(
			seq(
				repeat($.NLS),
				repeat1(seq(";", repeat($.NLS))),
			),
			repeat1($.NLS)
		),
		//_semis: $ => seq(optional($.NLS), repeat(seq(";", optional($.NLS)))),
		//parameter: $ => "parameter",





		//=================converted from antlr (expressions with some restrictions)==========================





		parameter: $ => seq(
			$.simpleIdentifier,
			optional($.NLS),
			$.COLON,
			optional($.NLS),
			$.type
		),

		type: $ => seq(
			optional($.typeModifiers),
			choice(
				$.parenthesizedType,
				$.nullableType,
				$.typeReference,
				$.functionType
			)
		),

		typeReference: $ => choice(
			$.userType,
			$.DYNAMIC
		),

		quest: $ => $.NLSQUEST,

		userType: $ => seq(
			optional(seq(
				$.userType,
				alias($.NLSDOT, $.DOT),
				optional($.NLS)
			)),
			$.simpleUserType,
		),

		simpleUserType: $ => prec.right(seq(
			alias($.simpleIdentifier, $.type_identifier),
			optional(seq(
				//optional($.NLS),
				$.typeArguments
			))
		)),

		typeProjection: $ => choice(
			seq(
				optional($.typeProjectionModifiers),
				$.type
			),
			$.MULT
		),

		expression: $ => $._jumpExpression,

		disjunction: $ => seq(
			$.conjunction,
			repeat(seq(
				//optional($.NLS),
				$.DISJ,
				optional($.NLS),
				$.conjunction,
				optional($.NLS)
			))
		),

		conjunction: $ => seq(
			$.equality,
			repeat(seq(
				//optional($.NLS),
				$.CONJ,
				optional($.NLS),
				$.equality,
		        optional($.NLS)
			))
		),

		equality: $ => seq(
			$.comparison,
			repeat(seq(
				$.equalityOperator,
				optional($.NLS),
				$.comparison
			))
		),

		comparison: $ => seq(
			$.infixOperation,
			optional(seq(
				$.comparisonOperator,
				optional($.NLS),
				$.infixOperation
			))
		),

		infixOperation: $ => seq(
			$.elvisExpression,
			repeat(choice(
				seq(
					$.inOperator,
					optional($.NLS),
					$.elvisExpression
				),
				seq(
					$.isOperator,
					optional($.NLS),
					$.type
				)
			))
		),

		elvisExpression: $ => seq(
			$.infixFunctionCall,
			repeat(seq(
				//optional($.NLS),
				$.elvis,
				optional($.NLS),
				$.infixFunctionCall,
		        optional($.NLS)
			))
		),

		infixFunctionCall: $ => prec.right(seq(
			$.rangeExpression,
			repeat(seq(
				$.simpleIdentifier,
				optional($.NLS),
				$.rangeExpression
			))
		)),

		rangeExpression: $ => seq(
			$.additiveExpression,
			repeat(seq(
				$.RANGE,
				optional($.NLS),
				$.additiveExpression
			))
		),

		additiveExpression: $ => seq(
			$.multiplicativeExpression,
			repeat(seq(
				$.additiveOperator,
				optional($.NLS),
				$.multiplicativeExpression
			))
		),

		multiplicativeExpression: $ => seq(
			$.asExpression,
			repeat(seq(
				$.multiplicativeOperator,
				optional($.NLS),
				$.asExpression
			))
		),

		asExpression: $ => seq(
			$.prefixUnaryExpression,
			optional(seq(
				//optional($.NLS),
				$.asOperator,
				optional($.NLS),
				$.type
			))
		),

		prefixUnaryExpression: $ => seq(
			repeat($.unaryPrefix),
			$.postfixUnaryExpression
		),

		unaryPrefix: $ => prec.right(1, choice(
			$.annotation,
			$.label,
			seq(
				$.prefixUnaryOperator,
				optional($.NLS)
			)
		)),

		postfixUnaryExpression: $ => seq(
			$.primaryExpression,
			repeat(seq(
				$.postfixUnarySuffix,
			))
		),

		postfixUnarySuffix: $ => choice(
			$.postfixUnaryOperator,
			//$.typeArguments,
			$.callSuffix,
			$.indexingSuffix,
			$.navigationSuffix,
		),

		navigationSuffix: $ => seq(
			//optional($.NLS),
			$.memberAccessOperator,
			optional($.NLS),
			choice(
				$.simpleIdentifier,
				$.parenthesizedExpression,
				$.CLASS
			)
		),

		callSuffix: $ => prec.right(choice(
			seq(
				optional($.typeArguments),
				optional($.valueArguments),
				$.annotated_lambda,
			),
			seq(
				optional($.typeArguments),
				$.valueArguments
			)
		)),

		typeArguments: $ => seq(
			$.LANGLE,
			optional($.NLS),
			$.typeProjection,
			repeat(seq(
				optional($.NLS),
				$.COMMA,
				optional($.NLS),
				$.typeProjection
			)),
			optional($.NLS),
			$.RANGLE
		),

		valueArguments: $ => choice(
			seq(
				$.LPAREN,
				optional($.NLS),
				$.RPAREN
			),
			seq(
				$.LPAREN,
				optional($.NLS),
				$.valueArgument,
				repeat(seq(
					optional($.NLS),
					$.COMMA,
					optional($.NLS),
					$.valueArgument
				)),
				optional($.NLS),
				$.RPAREN
			)
		),

		valueArgument: $ => seq(
			optional(seq($.annotation, optional($.NLS))),
			optional(seq(
				$.simpleIdentifier,
				//optional($.NLS),
				$.ASSIGNMENT,
				optional($.NLS)
			)),
			optional(seq($.MULT, optional($.NLS))),
			$.expression
		),

		primaryExpression: $ => choice(
			$.parenthesizedExpression,
			$.simpleIdentifier,
			$.literalConstant,
			$.stringLiteral,
			$.callableReference,
			//$._function_literal,
			//$.object_literal,
			$.collectionLiteral,
			$.thisExpression,
			$.superExpression,
			//$.if_expression,
			//$.when_expression,
			//$.try_expression,
			// jumpExpression was move to the top, see expression rule
		),

		literalConstant: $ => choice(
			$.BooleanLiteral,
			$.IntegerLiteral,
			$.HexLiteral,
			$.BinLiteral,
			$.CharacterLiteral,
			$.RealLiteral,
			$.NullLiteral,
			$.LongLiteral,
			$.UnsignedLiteral
		),

		stringLiteral: $ => choice(
			$.lineStringLiteral,
			$.multiLineStringLiteral
		),

		_jumpExpression: $ => prec.right(choice(
			$.disjunction,
			seq(
				$.THROW,
				optional($.NLS),
				$._jumpExpression,
			),
			seq(
				choice(
					$.RETURN,
					$.RETURN_AT,
				),
				optional($._jumpExpression),
			),
			$.CONTINUE,
			$.CONTINUE_AT,
			$.BREAK,
			$.BREAK_AT,
		)),

		additiveOperator: $ => choice(
			$.ADD,
			$.SUB
		),

		multiplicativeOperator: $ => choice(
			$.MULT,
			$.DIV,
			$.MOD
		),

		prefixUnaryOperator: $ => choice(
			$.INCR,
			$.DECR,
			$.SUB,
			$.ADD,
			$.excl
		),

		memberAccessOperator: $ => choice(
			$.DOT,
			$.safeNav,
			$.COLONCOLON
		),

		simpleIdentifier: $ => prec(PREC.SIMPLE_IDENTIDIER, choice(
			$.Identifier,
			$.ABSTRACT,
			$.ANNOTATION,
			$.BY,
			$.CATCH,
			$.COMPANION,
			$.CONSTRUCTOR,
			$.CROSSINLINE,
			$.DATA,
			$.DYNAMIC,
			$.ENUM,
			$.EXTERNAL,
			$.FINAL,
			$.FINALLY,
			$.GET,
			$.IMPORT,
			$.INFIX,
			$.INIT,
			$.INLINE,
			$.INNER,
			$.INTERNAL,
			$.LATEINIT,
			$.NOINLINE,
			$.OPEN,
			$.OPERATOR,
			$.OUT,
			$.OVERRIDE,
			$.PRIVATE,
			$.PROTECTED,
			$.PUBLIC,
			$.REIFIED,
			$.SEALED,
			$.TAILREC,
			$.SET,
			$.VARARG,
			$.WHERE,
			$.FIELD,
			$.PROPERTY,
			$.RECEIVER,
			$.PARAM,
			$.SETPARAM,
			$.DELEGATE,
			$.FILE,
			$.EXPECT,
			$.ACTUAL,
			$.CONST,
			$.SUSPEND
		)),
